fix information on CV

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <header class="main-header">
             <div class="title-container">
                 <h1>Tatsiana Tsakunova</h1>
+                <h6>FRONTEND DEVELOPER</h6>
             </div>
             <nav>
                 <ul class="menu-list">
                     <li><a href="#about">About</a></li>
                     <li><a href="#about">Skills</a></li>
                     <li><a href="#education">Education</a></li>
-                    <li><a href="#examples">Comment</a></li>
                     <li><a href="#projects">Projects</a></li>
                 </ul>
             </nav>
@@ -37,7 +37,6 @@
                         <li><a href="#about">About</a></li>
                         <li><a href="#about">Skills</a></li>
                         <li><a href="#education">Education</a></li>
-                        <li><a href="#examples">Comment</a></li>
                         <li><a href="#projects">Projects</a></li>
                     </ul>
                 </nav>
@@ -61,10 +60,9 @@
             <div class="none">
                 <h2>Social</h2>
                 <ul class="fa-ul">
-                    <li><i class="fa-li fab fa-discord"></i><a href="https://discord.gg/Bvdh9Dhj9Y"><span
-                                class="ul-contact">Discord</span><br>Tanya Tsakunova
-                            <br>
-                            (tsakunova)#2426 </a></li>
+                    <li><i class="fa-li fab fa-linkedin"></i><a href="https://www.linkedin.com/in/tatsiana-tsakunova/"
+                            target="_blank"><span class="ul-contact">LinkedIn</span><br>Tatsiana Tsakunova
+                        </a></li>
                     <li><i class="fa-li fab fa-github"></i><a href="https://github.com/tsakunova" target="_blank"><span
                                 class="ul-contact">GitHub</span><br> tsakunova</a></li>
                     <li><i class="fa-li  fab fa-skype"></i><a href="skype:live:.cid.e84dd81a1bc7530?chat"><span
@@ -72,6 +70,20 @@
 
                 </ul>
             </div>
+            <div class="none">
+                <h2>Skills</h2>
+                <ul class="time-line">
+                    <li>HTML+CSS;</li>
+                    <li>JavaScript;</li>
+                    <li>ReactJS;</li>
+                    <li>Angular (basics);</li>
+                    <li>Typescript (basics);</li>
+                    <li>Git</li>
+                    <li>Scratch;</li>
+                    <li>Figma, Photoshop</li>
+                </ul>
+            </div>
+
         </aside>
         <main class="main">
             <section class="sections">
@@ -81,27 +93,13 @@
                     <i class="fas fa-user-alt fa-stack-1x"></i>
                 </span>
                 <h2>About me</h2>
-                <p>My goal is to start a career junior front-end developer and develop in this area.
-                    I am currently working as a teacher. I took the first step towards my goal - I quit public school
-                    and work as a Scratch and HTML + CSS trainer for children in an online school, while I actively
-                    study programming languages. I have good analytical skills. Easy to learn. I work well in a team.
+                <p>My goal is to start a career junior front-end
+                    developer and develop in this area. I have
+                    good analytical skills. I'm a quick learner. I
+                    enjoy working in a team environment, and I
+                    get along well with people
                 </p>
 
-            </section>
-            <section class="sections">
-                <a id='skills'></a>
-                <span class="fa-stack fa-lg  icons">
-                    <i class="far fa-circle fa-stack-2x"></i>
-                    <i class="fas fa-laptop-code  fa-stack-1x"></i>
-                </span>
-                <h2>Skills</h2>
-                <ul class="time-line">
-                    <li>HTML+CSS;</li>
-                    <li>JavaScript (basic);</li>
-                    <li>Git</li>
-                    <li>Scratch;</li>
-                    <li>Figma, Photoshop</li>
-                </ul>
             </section>
             <section class="sections">
                 <a id='education'></a>
@@ -109,12 +107,24 @@
                     <i class="far fa-circle fa-stack-2x"></i>
                     <i class="fas fa-book fa-stack-1x"></i>
                 </span>
-                <h2>Education</h2>
+                <h2>Education History</h2>
                 <ul class="time-line with-date ">
                     <li>
-                        <span class="date">2021-present</span>
+                        <span class="date">March 2022 -Till now</span>
                         <a href="https://rs.school/" target="_blank">
-                            <span>RS School JS/FRONT-END courses:</span>
+                            <span>Epam Systems - JavaScript Lab</span>
+                        </a>
+                    </li>
+                    <li>
+                        <span class="date">Oct 2021 -Jan 2022</span>
+                        <a href="https://rs.school/" target="_blank">
+                            <span>Epam Systems - Front-End Outside Training</span>
+                        </a>
+                    </li>
+                    <li>
+                        <span class="date">2021-2022</span>
+                        <a href="https://rs.school/" target="_blank">
+                            <span>RS School JS/FRONT-END courses</span>
                         </a>
                     </li>
                     <li>
@@ -127,8 +137,7 @@
                         <span class="date">2018 - 2019</span>
                         <a href="https://ipk.gstu.by/" target="_blank">
                             <span>Gomel State Technical University, Institute for Advanced
-                                Studies
-                                and Retraining, programmer - Web-designer</span>
+                                Studies and Retraining, programmer - Web-designer</span>
                         </a>
                     </li>
                     <li>
@@ -146,24 +155,30 @@
                 </ul>
             </section>
             <section class="sections">
-                <a id='examples'></a>
-                <span class="fa-stack fa-lg icons">
+                <a id='work'></a>
+                <span class="fa-stack fa-lg  icons">
                     <i class="far fa-circle fa-stack-2x"></i>
-                    <i class="fas fa-code fa-stack-1x"></i>
+                    <i class="fas fa-book fa-stack-1x"></i>
                 </span>
-                <h2>Comment</h2>
-                <h4>Task:</h4>
-                <form action="#" method="post">
-                    
-                    <textarea name="comment" id="comment" placeholder="Please, enter a comment"></textarea>
-                   <div class="comment-hov"> </div>
-                    <input type="button" value="check" id='check-form'>
-                    <input type="tel" name="tel-form" id="tel-form" placeholder="+375YYXXXXXXX"
-                        minlength="12" maxlength="18">
-                    <label for="tel-form" id="telMess">Please, enter a correct phone number</label>
-
-                </form>
-
+                <h2>Work Experience</h2>
+                <ul class="time-line with-date ">
+                    <li>
+                        <span class="date">Apr 2019 - Till now</span>
+                        <a href="https://rs.school/" target="_blank">
+                            <span>ITGenio online school - <b>Tutor Scratch, HTML/CSS, JS</b></span>
+                        </a>
+                        <p>Teaching children and teenagers the basics of
+                            programming in a visual environment Scratch
+                            Teaching teenagers the basics of frontend
+                            development</p>
+                    </li>
+                    <li>
+                        <span class="date">Sep 2005 - Aug 2019</span>
+                        <a href="https://gpk.by/" target="_blank">
+                            <span>Secondary school №66 Gomel - <b>Primary school teacher</b></span>
+                        </a>
+                    </li>
+                </ul>
             </section>
             <section class="sections">
                 <a id='projects'></a>
@@ -172,62 +187,93 @@
                     <i class="fab fa-chrome fa-stack-1x"></i>
                 </span>
                 <h2>Projects</h2>
+
                 <div class="projects-gallery">
                     <div class="project-item">
-                       
-                        <a href="https://tsakunova.github.io/gem-puzzle/"
-                            target="_blank">
+                        <a href="https://tsakunova.github.io/museum/museum-dom/" target="_blank">
+                            <img src="images/projects/museum.jpg" alt="museum">
+                            <h3>Louvre</h3>
+                            <p>Landing page Louvre - one of the largest and most popular art museums in the world</p>
+                        </a>
+                        <div class="git-link">
+                            <a href="https://github.com/tsakunova/museum" target="_blank"><i
+                                    class="fab fa-github-square"></i>Link to GitHub</a>
+                        </div>
+                    </div>
+                    <div class="project-item">
+                        <a href="https://tsakunova.github.io/christmas-tree/" target="_blank">
+                            <img src="images/projects/chrismas.jpg" alt="Christmas tree">
+                            <h3>Christmas tree</h3>
+                            <p>Creating your own collection of Christmas toys and
+                                decorating the Christmas tree with them</p>
+                        </a>
+                        <div class="git-link">
+                            <a href="https://github.com/tsakunova/christmas-tree" target="_blank"><i
+                                    class="fab fa-github-square"></i>Link to GitHub</a>
+                        </div>
+                    </div>
+                    <div class="project-item">
+                        <a href="https://tsakunova.github.io/art-quiz/" target="_blank">
+                            <img src="images/projects/art.jpg" alt="ArtQuiz">
+                            <h3>ArtQuiz</h3>
+                            <p>ArtQuiz - application for knowledge of masterpieces of painting
+                                and their authors</p>
+                        </a>
+                        <div class="git-link">
+                            <a href="https://github.com/tsakunova/art-quiz" target="_blank"><i
+                                    class="fab fa-github-square"></i>Link to GitHub</a>
+                        </div>
+                    </div>
+                    <div class="project-item">
+
+                        <a href="https://tsakunova.github.io/gem-puzzle/" target="_blank">
                             <img src="images/projects/gem-puzzle.jpg" alt="gem-puzzle">
                             <h3>Gem puzzle game</h3>
                             <p>The goal of the game is to move the knuckles around the box to arrange them by numbers,
                                 preferably by making as few movements as possible.</p>
                         </a>
-                         <div class="git-link">
-                            <a href="https://github.com/tsakunova/gem-puzzle" target="_blank"><i class="fab fa-github-square"></i>Link to GitHub</a>
-                        </div>
-                    </div>
-                    <div class="project-item">
-                        <a href="https://tsakunova.github.io/virtual-keyboard/"
-                            target="_blank">
-                            <img src="images/projects/keyboard.jpg" alt="keyboard">
-                            <h3>Virtual keyboard</h3>
-                            <p>Virtual keyboard project. After completing the project, I improved my skills in working
-                                with the DOM, was able to get acquainted and work with an experimental voice recognition
-                                technology - SpeechRecognition.</p>
                         <div class="git-link">
-                            <a href="https://github.com/tsakunova/virtual-keyboard" target="_blank"><i class="fab fa-github-square"></i>Link to GitHub</a>
+                            <a href="https://github.com/tsakunova/gem-puzzle" target="_blank"><i
+                                    class="fab fa-github-square"></i>Link to GitHub</a>
                         </div>
-                        </a>
                     </div>
                     <div class="project-item">
                         <a href="https://tsakunova.github.io/momentum/" target="_blank">
                             <img src="images/projects/momentum.jpg" alt="momentum">
                             <h3>Momentum</h3>
-                            <p>Momentum is an analogue of the app of the same name in the Chrome web store. The
-                                application shows the time and username, his goal for the current day. The background
-                                image changes depending on the time of day. The application uses local storage to store
-                                data.</p>
-                            <p>You will learn how to work with date and time, create a clock, store data in local
-                                storage, and, most importantly, get acquainted with asynchronous requests using specific
-                                examples.</p>
+                            <p>Momentum is an analogue of the app of the same name in the Chrome web store.</p>
                         </a>
                         <div class="git-link">
-                            <a href="https://github.com/tsakunova/momentum" target="_blank"><i class="fab fa-github-square"></i>Link to GitHub</a>
+                            <a href="https://github.com/tsakunova/momentum" target="_blank"><i
+                                    class="fab fa-github-square"></i>Link to GitHub</a>
                         </div>
                     </div>
                     <div class="project-item">
-                        <a href="https://tsakunova.github.io/calculator/"
-                            target="_blank">
+                        <a href="https://tsakunova.github.io/virtual-keyboard/" target="_blank">
+                            <img src="images/projects/keyboard.jpg" alt="keyboard">
+                            <h3>Virtual keyboard</h3>
+                            <p>Virtual keyboard project. After completing the project, I improved my skills in working
+                                with the DOM, was able to get acquainted and work with an experimental voice recognition
+                                technology - SpeechRecognition.</p>
+                            <div class="git-link">
+                                <a href="https://github.com/tsakunova/virtual-keyboard" target="_blank"><i
+                                        class="fab fa-github-square"></i>Link to GitHub</a>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="project-item">
+                        <a href="https://tsakunova.github.io/calculator/" target="_blank">
                             <img src="images/projects/calculator.jpg" alt="calculator">
                             <h3>Calculator JS</h3>
                             <p>The calculator is one of the best projects to get started with JavaScript for the first
                                 time. Such a project includes rather complex moments of creating a user interface and
                                 using JavaScript to work with it, and at the same time it is quite simple to implement
                                 and available to developers of any skill level.</p>
-                            <p>CSS uses grids and flexboxes, JS uses classes</p>
                         </a>
                         <div class="git-link">
-                            <a href="https://github.com/tsakunova/calculator" target="_blank"><i class="fab fa-github-square"></i>Link to GitHub</a>
+                            <a href="https://github.com/tsakunova/calculator" target="_blank"><i
+                                    class="fab fa-github-square"></i>Link to GitHub</a>
                         </div>
                     </div>
 
@@ -241,7 +287,7 @@
                 <ul class="footer-list">
                     <li><a href="https://github.com/tsakunova" target="_blank"><i class="fab fa-github-square"></i></a>
                     </li>
-                    <li><time>2021</time></li>
+                    <li><time>2022</time></li>
                 </ul>
             </div>
         </footer>
