--- a/index.html
+++ b/index.html
@@ -73,14 +73,18 @@
             <div class="none">
                 <h2>Skills</h2>
                 <ul class="time-line">
-                    <li>HTML+CSS;</li>
-                    <li>JavaScript;</li>
-                    <li>ReactJS;</li>
-                    <li>Angular (basics);</li>
-                    <li>Typescript (basics);</li>
+                    <li>HTML/CSS/SASS</li>
+                    <li>JavaScript</li>
+                    <li>ReactJS</li>
+                    <li>React Native</li> 
+                    <li>Typescript</li>
+                    <li>MobX</li>
+                    <li>Redux</li>
+                    <li>Webpack</li>
+                    <li>HTTP/REST API</li>
                     <li>Git</li>
-                    <li>Scratch;</li>
                     <li>Figma, Photoshop</li>
+                    <li>Angular (basics)</li>
                 </ul>
             </div>
 
@@ -93,12 +97,12 @@
                     <i class="fas fa-user-alt fa-stack-1x"></i>
                 </span>
                 <h2>About me</h2>
-                <p>My goal is to start a career junior front-end
-                    developer and develop in this area. I have
-                    good analytical skills. I'm a quick learner. I
-                    enjoy working in a team environment, and I
-                    get along well with people
-                </p>
+                <ul>
+                    <li>Fast learner and highly motivated Frontend Developer</li>
+                    <li>Able to learn unknown technologies and tools for use in projects.</li>
+                    <li>Have skill to find solution and solve the problems.</li>
+                    <li>Open to new experience.</li>
+                </ul>
 
             </section>
             <section class="sections">
@@ -110,21 +114,21 @@
                 <h2>Education History</h2>
                 <ul class="time-line with-date ">
                     <li>
-                        <span class="date">March 2022 -Till now</span>
-                        <a href="https://rs.school/" target="_blank">
+                        <span class="date">March 2022 -June 2022</span>
+                        <a href="https://training.by/" target="_blank">
                             <span>Epam Systems - JavaScript Lab</span>
                         </a>
                     </li>
                     <li>
                         <span class="date">Oct 2021 -Jan 2022</span>
-                        <a href="https://rs.school/" target="_blank">
-                            <span>Epam Systems - Front-End Outside Training</span>
+                        <a href="https://training.by/" target="_blank">
+                            <span>Epam Systems - FrontEnd Outside Training</span>
                         </a>
                     </li>
                     <li>
-                        <span class="date">2021-2022</span>
+                        <span class="date">2021-Feb 2022</span>
                         <a href="https://rs.school/" target="_blank">
-                            <span>RS School JS/FRONT-END courses</span>
+                            <span>RS School JS/FrontEnd courses</span>
                         </a>
                     </li>
                     <li>
@@ -163,12 +167,20 @@
                 <h2>Work Experience</h2>
                 <ul class="time-line with-date ">
                     <li>
-                        <span class="date">Apr 2019 - Till now</span>
-                        <a href="https://rs.school/" target="_blank">
+                        <span class="date">July 2022 - Till now</span>
+                        <a href="https://www.epam.com/" target="_blank">
+                            <span>EPAM Systems - <b>Frontend developer</b></span>
+                        </a>
+                        <p>Created new React Native components. Implemented new features, 
+                            debugged and refactored existing code.</p>
+                    </li>
+                    <li>
+                        <span class="date">Apr 2019 - June 2022</span>
+                        <a href="https://itgen.io/" target="_blank">
                             <span>ITGenio online school - <b>Tutor Scratch, HTML/CSS, JS</b></span>
                         </a>
                         <p>Teaching children and teenagers the basics of
-                            programming in a visual environment Scratch
+                            programming in a visual environment Scratch. 
                             Teaching teenagers the basics of frontend
                             development</p>
                     </li>
